Tried map dark mode and figured it was a issue with billing

--- a/src/style.css
+++ b/src/style.css
@@ -298,5 +298,6 @@ backdrop-filter: blur(0.8px);
 #map{
     height: 100%;
     width: 100%;
+    border-radius: 10px;
 }
 
